--- a/_site.yml
+++ b/_site.yml
@@ -12,4 +12,6 @@ navbar:
       href: Links.html
     - text: "Ggplot"
       href: Ggplot.html
+    - text: "Data Rangling"
+      href: DataRangling.html
 output_dir: "docs"
